--- a/index.ipynb
+++ b/index.ipynb
@@ -358,6 +358,7 @@
     "                          cmap=plt.cm.Blues):\n",
     "    #Pseudocode/Outline:\n",
     "    #Print the confusion matrix (optional)\n",
+    "    print(cm)\n",
     "    #Create the basic matrix.\n",
     "    #Add title and Axis Labels\n",
     "    #Add appropriate Axis Scales\n",
