Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,7 +359,7 @@
     "    #Pseudocode/Outline:\n",
     "    print(cm)\n",
     "    #Create the basic matrix.\n",
-    "    \n",
+    "    plt.imshow(cnf_matrix,  cmap=plt.cm.Blues)\n",
     "    #Add title and Axis Labels\n",
     "    #Add appropriate Axis Scales\n",
     "    #Add Labels to Each Cell\n",
