Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -361,6 +361,7 @@
     "    #Create the basic matrix.\n",
     "    plt.imshow(cnf_matrix,  cmap=plt.cm.Blues)\n",
     "    #Add title and Axis Labels\n",
+    "    plt.\n",
     "    #Add appropriate Axis Scales\n",
     "    #Add Labels to Each Cell\n",
     "    #Add a Side Bar Legend Showing Colors"
