Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -361,8 +361,9 @@
     "    #Create the basic matrix.\n",
     "    plt.imshow(cnf_matrix,  cmap=plt.cm.Blues)\n",
     "    #Add title and Axis Labels\n",
-    "    plt.\n",
+    "    plt.title(title)\n",
     "    #Add appropriate Axis Scales\n",
+    "    plt.xlav\n",
     "    #Add Labels to Each Cell\n",
     "    #Add a Side Bar Legend Showing Colors"
    ]
