Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,8 @@
     "    #Add title and Axis Labels\n",
     "    plt.title(title)\n",
     "    #Add appropriate Axis Scales\n",
-    "    plt.xlav\n",
+    "    plt.xlabel('Predicted Label')\n",
+    "    plt.ylabel('Act')\n",
     "    #Add Labels to Each Cell\n",
     "    #Add a Side Bar Legend Showing Colors"
    ]
