Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,7 @@
     "    plt.title(title)\n",
     "    #Add appropriate Axis Scales\n",
     "    plt.xlabel('Predicted Label')\n",
-    "    plt.ylabel('Act')\n",
+    "    plt.ylabel('True Label')\n",
     "    #Add Labels to Each Cell\n",
     "    #Add a Side Bar Legend Showing Colors"
    ]
