Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -367,6 +367,7 @@
     "    plt.ylabel('True Label')\n",
     "    \n",
     "    #Add Labels to Each Cell\n",
+    "    thresh = fm.\n",
     "    #Add a Side Bar Legend Showing Colors"
    ]
   },
