Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -367,7 +367,8 @@
     "    plt.ylabel('True Label')\n",
     "    \n",
     "    #Add Labels to Each Cell\n",
-    "    thresh = fm.\n",
+    "    thresh = cm.max() / 2\n",
+    "    for i, j in itertools.\n",
     "    #Add a Side Bar Legend Showing Colors"
    ]
   },
