--- a/index.ipynb
+++ b/index.ipynb
@@ -368,7 +368,7 @@
     "    \n",
     "    #Add Labels to Each Cell\n",
     "    thresh = cm.max() / 2\n",
-    "    for i, j in itertools.\n",
+    "    for i, j in itertools.product(range(cm.shape[0]))\n",
     "    #Add a Side Bar Legend Showing Colors"
    ]
   },
