Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -368,7 +368,8 @@
     "    \n",
     "    #Add Labels to Each Cell\n",
     "    thresh = cm.max() / 2\n",
-    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1]))\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j,i )\n",
     "    #Add a Side Bar Legend Showing Colors"
    ]
   },
