--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
     "    #Add Labels to Each Cell\n",
     "    thresh = cm.max() / 2\n",
     "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-    "        plt.text(j,i )\n",
+    "        plt.text(j,i cm[i,j], horizon)\n",
     "    #Add a Side Bar Legend Showing Colors"
    ]
   },
