Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,10 @@
     "    thresh = cm.max() / 2\n",
     "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
     "        plt.text(j,i cm[i,j], color='w' if cm[i,j] > thresh else 'black')\n",
-    "    #Add a Side Bar Legend Showing Colors"
+    "    \n",
+    "    \n",
+    "    #Add a Side Bar Legend Showing Colors\n",
+    "    plt.colorbar"
    ]
   },
   {
