--- a/index.ipynb
+++ b/index.ipynb
@@ -349,9 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-7b80757d1144>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-7b80757d1144>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    plt.text(j,i cm[i,j], color='w' if cm[i,j] > thresh else 'black')\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def plot_confusion_matrix(cm, classes,\n",
     "                          title='Confusion matrix',\n",
@@ -373,7 +382,7 @@
     "    \n",
     "    \n",
     "    #Add a Side Bar Legend Showing Colors\n",
-    "    plt.colorbar"
+    "    plt.colorbar()"
    ]
   },
   {
