--- a/index.ipynb
+++ b/index.ipynb
@@ -349,18 +349,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-7b80757d1144>, line 17)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-7b80757d1144>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    plt.text(j,i cm[i,j], color='w' if cm[i,j] > thresh else 'black')\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_confusion_matrix(cm, classes,\n",
     "                          title='Confusion matrix',\n",
@@ -378,7 +369,7 @@
     "    #Add Labels to Each Cell\n",
     "    thresh = cm.max() / 2\n",
     "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-    "        plt.text(j,i cm[i,j], color='w' if cm[i,j] > thresh else 'black')\n",
+    "        plt.text(j,i, cm[i,j], color='w' if cm[i,j] > thresh else 'black')\n",
     "    \n",
     "    \n",
     "    #Add a Side Bar Legend Showing Colors\n",
