Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,15 +394,25 @@
     "                          title='Confusion matrix',\n",
     "                          cmap=plt.cm.Blues):\n",
     "    #Check if Normalization Option is Set to True. If so, normalize the raw confusion matrix before visualizing\n",
+    "    if norm\n",
     "    \n",
-    "    #Other code should be equivalent to your previous function\n",
-    "\n",
-    "    #Print the confusion matrix (optional)\n",
+    "    print(cm)\n",
     "    #Create the basic matrix.\n",
+    "    plt.imshow(cnf_matrix,  cmap=plt.cm.Blues)\n",
     "    #Add title and Axis Labels\n",
+    "    plt.title(title)\n",
     "    #Add appropriate Axis Scales\n",
+    "    plt.xlabel('Predicted Label')\n",
+    "    plt.ylabel('True Label')\n",
+    "    \n",
     "    #Add Labels to Each Cell\n",
-    "    #Add a Side Bar Legend Showing Colors"
+    "    thresh = cm.max() / 2\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j,i, cm[i,j], color='w' if cm[i,j] > thresh else 'black')\n",
+    "    \n",
+    "    \n",
+    "    #Add a Side Bar Legend Showing Colors\n",
+    "    plt.colorbar()"
    ]
   },
   {
