--- a/index.ipynb
+++ b/index.ipynb
@@ -393,8 +393,10 @@
     "                          normalize=False,\n",
     "                          title='Confusion matrix',\n",
     "                          cmap=plt.cm.Blues):\n",
-    "    #Check if Normalization Option is Set to True. If so, normalize the raw confusion matrix before visualizing\n",
-    "    if norm\n",
+    "    # Check if Normalization Option is Set to True. If so, \n",
+    "    # normalize the raw confusion matrix before visualizing\n",
+    "    if normalize:\n",
+    "        \n",
     "    \n",
     "    print(cm)\n",
     "    #Create the basic matrix.\n",
