--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
     "    # Check if Normalization Option is Set to True. If so, \n",
     "    # normalize the raw confusion matrix before visualizing\n",
     "    if normalize:\n",
-    "        \n",
+    "        cm.normalize()\n",
     "    \n",
     "    print(cm)\n",
     "    #Create the basic matrix.\n",
