Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
     "    # Check if Normalization Option is Set to True. If so, \n",
     "    # normalize the raw confusion matrix before visualizing\n",
     "    if normalize:\n",
-    "        cm.normalize()\n",
+    "        cm.normalize?\n",
     "    \n",
     "    print(cm)\n",
     "    #Create the basic matrix.\n",
