Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
     "    # Check if Normalization Option is Set to True. If so, \n",
     "    # normalize the raw confusion matrix before visualizing\n",
     "    if normalize:\n",
-    "        cm.normalize?\n",
+    "        cm.normalize\n",
     "    \n",
     "    print(cm)\n",
     "    #Create the basic matrix.\n",
@@ -430,10 +430,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Plot normalized confusion matrix\n",
-    "# Your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
