Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -430,7 +430,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plot_confusion_matrix(cm, classes,\n",
+    "                          normalize=True,\n",
+    "                          title='Confusion matrix',\n",
+    "                          cmap=plt.cm.Blues):"
+   ]
   },
   {
    "cell_type": "markdown",
