Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -427,11 +427,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-3ef6c67950a1>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-3ef6c67950a1>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    cmap=plt.cm.Blues):\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "plot_confusion_matrix(cm, classes,\n",
+    "plot_confusion_matrix(cnf_matrix, classes,\n",
     "                          normalize=True,\n",
     "                          title='Confusion matrix',\n",
     "                          cmap=plt.cm.Blues):"
