--- a/index.ipynb
+++ b/index.ipynb
@@ -427,15 +427,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-3ef6c67950a1>, line 4)",
+     "ename": "NameError",
+     "evalue": "name 'classes' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-3ef6c67950a1>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    cmap=plt.cm.Blues):\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-11ac55573015>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m plot_confusion_matrix(cnf_matrix, classes,\n\u001b[0m\u001b[1;32m      2\u001b[0m                           \u001b[0mnormalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                           \u001b[0mtitle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Confusion matrix'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                           cmap=plt.cm.Blues)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'classes' is not defined"
      ]
     }
    ],
@@ -443,7 +446,7 @@
     "plot_confusion_matrix(cnf_matrix, classes,\n",
     "                          normalize=True,\n",
     "                          title='Confusion matrix',\n",
-    "                          cmap=plt.cm.Blues):"
+    "                          cmap=plt.cm.Blues)"
    ]
   },
   {
