Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -407,6 +407,11 @@
     "    plt.xlabel('Predicted Label')\n",
     "    plt.ylabel('True Label')\n",
     "    \n",
+    "    class_names = set(y) #Get class labels to add to matrix\n",
+    "    tick_marks = np.arange(len(class_names))\n",
+    "    plt.xticks(tick_marks, class_names, rotation=45)\n",
+    "    plt.yticks(tick_marks, class_names)\n",
+    "    \n",
     "    #Add Labels to Each Cell\n",
     "    thresh = cm.max() / 2\n",
     "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
