Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,7 @@
     "    plt.xlabel('Predicted Label')\n",
     "    plt.ylabel('True Label')\n",
     "    \n",
-    "    class_names = set(y) #Get class labels to add to matrix\n",
+    "    class_names = set(classes) #Get class labels to add to matrix\n",
     "    tick_marks = np.arange(len(class_names))\n",
     "    plt.xticks(tick_marks, class_names, rotation=45)\n",
     "    plt.yticks(tick_marks, class_names)\n",
