Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -432,23 +432,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'classes' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-11ac55573015>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m plot_confusion_matrix(cnf_matrix, classes,\n\u001b[0m\u001b[1;32m      2\u001b[0m                           \u001b[0mnormalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                           \u001b[0mtitle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Confusion matrix'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                           cmap=plt.cm.Blues)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'classes' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "plot_confusion_matrix(cnf_matrix, classes,\n",
+    "plot_confusion_matrix(cnf_matrix, y,\n",
     "                          normalize=True,\n",
     "                          title='Confusion matrix',\n",
     "                          cmap=plt.cm.Blues)"
