Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -397,6 +397,8 @@
     "    # normalize the raw confusion matrix before visualizing\n",
     "    if normalize:\n",
     "        cm.normalize\n",
+    "            if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
     "    \n",
     "    print(cm)\n",
     "    #Create the basic matrix.\n",
