Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -396,8 +396,7 @@
     "    # Check if Normalization Option is Set to True. If so, \n",
     "    # normalize the raw confusion matrix before visualizing\n",
     "    if normalize:\n",
-    "        cm.normalize\n",
-    "            if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum\n",
     "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
     "    \n",
     "    print(cm)\n",
