Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
     "    #Add Labels to Each Cell\n",
     "    thresh = cm.max() / 2\n",
     "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-    "        plt.text(j,i, cm[i,j], color='w' if cm[i,j] > thresh else 'black')\n",
+    "        plt.text(j,i, cm[i,j], horizontalalignment=\"center\", color='w' if cm[i,j] > thresh else 'black')\n",
     "    \n",
     "    \n",
     "    #Add a Side Bar Legend Showing Colors\n",
